--- a/sfm_pc/static/sass/snippets/_modal.scss
+++ b/sfm_pc/static/sass/snippets/_modal.scss
@@ -13,7 +13,7 @@
         padding-bottom: 0.5em;
       }
       p{
-        max-height: 1rem;
+        overflow: auto;
         i{
           cursor: pointer;
           &:hover{
